travel-management/kubernetes/frontend/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: travelmngt-web-service
spec:
  selector:
    app: travelmngt-web
    tier: frontend
  ports:
  - port: 8085
